[package]
name = "nes"
version = "0.2.0-alpha01"
authors = ["bengdahl <bengdahl341@gmail.com>"]
edition = "2021"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
cpal = "0.13.4"
nes_core = { path = "../nes_core" }
iced = { git = "https://github.com/iced-rs/iced", rev = "e66a79", features = ["image", "tokio"] }
rtrb = "0.2.1"
iced_native =  { git = "https://github.com/iced-rs/iced", rev="e66a79" }
lazy_static = "1.4.0"
