[package]
name = "nes"
version = "0.2.0-alpha01"
authors = ["bengdahl <bengdahl341@gmail.com>"]
edition = "2021"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.4"
nes_core = { path = "../nes_core" }
iced = { version = "0.10", features = ["image", "tokio", "debug", "advanced"] }
rtrb = "0.2.1"
lazy_static = "1.4.0"
color-eyre = "0.6.2"
