[package]
name = "nes_wasm"
version = "0.1.0"
authors = ["bengdahl <bengdahl341@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.50"
nes_core = { path = "../nes_core" }
lazy_static = "1.4.0"

[dependencies.web-sys]
version = "0.3.35"
features = [
    'ImageData',
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
]