[package]
name = "nes_wasm"
version = "0.1.0"
authors = ["bengdahl <bengdahl341@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.59"
nes_core = { path = "../nes_core" }
lazy_static = "1.4.0"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.35"
features = [
    'ImageData',
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'HtmlImageElement',
    'AudioBuffer',
    'AudioBufferSourceNode',
    'AudioContext',
    'console',
]